[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["CodeVideoRenderer*"]

[tool.setuptools]
license-files = []

[tool.pyright]
strict = true
reportWildcardImportFromLibrary = false
reportSelfClsParameterName = false
reportIncompatibleMethodOverride = false
reportPossiblyUnboundVariable = false

[tool.setuptools.package-data]
CodeVideoRenderer = ["**/*.py", "**/*.ttf"]

[project]
name = "codevideorenderer"
version = "1.2.2"
description = "A Python library for rendering code videos"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Zhu Chongjing", email = "zhuchongjing_pypi@163.com"},
]
dependencies = [
    "manim>=0.18.0",
    "rich>=14.2.0",
    "numpy>=1.24.4",
    "proglog>=0.1.12",
    "moviepy>=2.2.1",
    "pillow>=10.4.0",
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ExploreMaths/CodeVideoRenderer"